...

  <android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/comic_image"
      android:layout_width="201dp"
      android:layout_height="202dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="8dp"
      android:importantForAccessibility="no"
...
